# Advanced-Neutal-Network

./: .gitignore  pyproject.toml
homework1/: problem1.py
homework2/: blood_smears.ipynb  blood_smears.md  problem.py  utils.py  ¨
homework2/lightning_logs/version_18/: metrics.csv
homework2/lightning_logs/version_19/: metrics.csv
homework2/lightning_logs/version_20/: metrics.csv
homework2/lightning_logs/version_21/: metrics.csv
homework2/lightning_logs/version_22/: metrics.csv
homework2/lightning_logs/version_22/checkpoints/: epoch=4-step=1250.ckpt
homework2/lightning_logs/version_8/: metrics.csv
homework2/lightning_logs/version_9/: metrics.csv
homework2/saved_models/: conv1_position_hard  conv2_position_easy  conv2_position_hard  conv3_position_easy  conv3_position_hard  conv_easy_data_set  conv_hard_data_best  conv_hard_data_set  conv_hard_data_set_norm  conv_position_easy  mlp_easy_data_set
